2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused

2011-06-10  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/utils.jl: removed (funcs now in rep.util.misc)

	* lisp/sawfish/cfg/layout.jl
	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/cfg/widgets/keymaps.jl
	* lisp/sawfish/cfg/widgets/match-windows.jl: updated for above change

	* lisp/sawfish/cfg/Makefile.in
	* lisp/sawfish/cfg/widgets/icon.jl: removed unused, dummy 'icon widget

	* lisp/sawfish/cfg/widgets/gtk/*: removed unused
	sawfish.cfg.widgets.gtk*

	* lisp/sawfish/gtk/widgets/program.jl: removed 'program widget (just
	an alias to 'file)

	* lisp/sawfish/gtk/Makefile.in
	* lisp/sawfish/wm/ext/play-audio.jl: updated

	* lisp/sawfish/gtk/widgets/simple-dialog.jl: better wmclass

	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/gtk/widget.jl: removed option-index (now in
	rep.util.misc) and command-index (exactly the same as option-index)

	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/cfg/widgets/frame-style.jl
	* lisp/sawfish/gtk/widget.jl: use option-index instead of position and
	protect against wrong values

2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in: bump minimum librep to 0.92.1, new funcs required by
	SawfishConfig

2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/mousetrap.jl: added defvars to be able to
	adjust the mousetrap keybindings. Set a timer of one second to
	properly block edge-actions after mousetrapping

	* lisp/sawfish/gtk/widgets/image.jl: due two fixes in rep-gtk it's possible
	now to set the filename in GtkFileChooserButton, so the GtkEntry is
	removed

	* configure.in: bump minimum GTK+ to 2.24, GDK to 2.23

	* lisp/sawfish/gtk/widget.jl: port 'choice, 'symbol and 'frame-style widgets
	to GtkComboBoxText


2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>